refactor: remove unused variables and improve type annotations in various files