@@ -52,7 +52,6 @@ import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -363,7 +362,7 @@ class ProcessoServiceTest {
 
             // Assert
             assertThat(res).hasSize(1);
-            assertThat(res.get(0).getCodSubprocesso()).isEqualTo(1L);
+            assertThat(res.getFirst().getCodSubprocesso()).isEqualTo(1L);
         }
 
         @Test
